fix: hide header logo texts on mobile

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -58,3 +58,9 @@
   align-items: center;
   gap: 24px;
 }
+
+@media screen and (max-width: 600px) {
+  .texts {
+    display: none;
+  }
+}
